# Calculadora-BMC

./: .cursorignore  .cursorindexingignore  .dockerignore  .doppler.yaml  .editorconfig  .env  .env.example  .gitignore  .mcp.json  .ml-tokens.enc  .vercelignore  AGENTS.md  ARCHITECTURE-PROPOSAL.md  AUDIT-PROMPT.md  BUG-FIXES.md  BUG-TRIAGE-RAMIRO.md  BUSINESS_LOGIC.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT-PROCEDURE.md  Dockerfile  Dockerfile.bmc-dashboard  EVALS-DELTA.md  EVALUATION-REPORT.md  EVALUATION_REPORT.md  El sistema de cotas del plano 2D (líneas.ini  GEMINI.md  HANDOFF-TASKS-PHASE-0.md  IMPROVEMENT-GUIDE.md  LICENSE  PACKAGE_MONOFILE.md  POMTOT-ASSESSMENT.md  PRODUCTOS_MAESTRO_PROD_READINESS.md  PR_DESCRIPTION.md  README Sync.yml  README.md  RECON-ORQUESTACION.md  REPOSITORY_GUIDELINES.md  REPO_CONTEXT.md  TEST-PER-DOT-OVERRIDES-SIMULATION.md  (+60 more)
.accessible-base/: admin_cotizaciones.json  crm_operativo.json  kb.json  manifest.json  matriz_precios.json
.claude/: HANDOFF-QUOTE-COUNTER-BLOCKER.md  settings.json
.codex/: config.toml
.cursor/: mcp.json  settings.json
.githooks/: post-commit  post-merge
.github/: ALLOWED_ENV_DRIFT.txt  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  required-cloud-run-secrets.txt
.grok/: config.toml
.playwright-cli/: page-2026-03-14T23-26-01-885Z.yml  page-2026-03-14T23-26-55-363Z.yml  page-2026-03-14T23-29-21-070Z.yml  (+2 more)
PanelRendering/: README.md  (+1 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
(+3465 files in other folders)
