[package]
name = "bmc-traktime"
version = "0.1.0"
description = "BMC TraKtiMe desktop timer — always-on-top mini window"
authors = ["BMC Uruguay / METALOG SAS"]
edition = "2021"
rust-version = "1.77.2"

# The Tauri app's Rust entry point lives in a lib so both desktop (main.rs) and
# (future) mobile entry points can share it.
[lib]
name = "bmc_traktime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Default Tauri custom-protocol for the bundled app.
custom-protocol = ["tauri/custom-protocol"]
